--- a/src/assets/css/genealogy-tree.scss
+++ b/src/assets/css/genealogy-tree.scss
@@ -48,7 +48,7 @@
     li{
         .parent-child-container{
             &:hover{
-                box-shadow: 0 0 8px 5px #00fafa;
+                box-shadow: 0 0 8px 5px #ff4b4b;
             }
 
         }
