--- a/src/assets/css/gallery.scss
+++ b/src/assets/css/gallery.scss
@@ -1,18 +1,19 @@
+@import './variables.scss';
+
 .gallery-page {
   .gallery {
     gap: 20px;
     .title {
       justify-content: center;
-      border-bottom: 1px solid #fff;
+      border-bottom: 1px solid rgba($text,0.5);
       padding-bottom: 15px;
-      border-color: #fff;
       align-items: center;
       gap: 10px;
       &::after {
         content: "";
         width: 40px;
         height: .5px;
-        background: #fff;
+        background: $text;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -21,7 +22,7 @@
         content: "";
         width: 40px;
         height: .5px;
-        background: #fff;
+        background: $text;
         display: flex;
         justify-content: center;
         align-items: center;
