--- a/src/assets/css/navigation.scss
+++ b/src/assets/css/navigation.scss
@@ -7,12 +7,13 @@
   left: 0;
   top: 0;
   z-index: 100;
-  &.fixed{
-    background: #000;
+  &.fixed {
+    background: rgb(0 79 92);
     padding: 0 0 15px;
     position: fixed;
+    border-bottom: 1px solid #5ecbdf;
   }
-  .title{
+  .title {
     display: flex;
     justify-content: center;
     width: 100%;
@@ -99,12 +100,11 @@
         transition: 0.5s ease;
         border: none;
         margin-left: 0;
-        .img{
+        .img {
           border: 3px dotted #5ecbdf;
           border-bottom: none;
           padding: 7px 5px;
           border-top: none;
-
         }
         .name {
           display: block;
@@ -163,8 +163,8 @@
         position: relative;
         z-index: 2;
         user-select: none;
-        &::before{
-          content: '';
+        &::before {
+          content: "";
           display: flex;
           position: absolute;
           width: 0%;
@@ -174,14 +174,13 @@
         }
         &:hover {
           color: #002c34;
-          &::before{
+          &::before {
             width: 100%;
             height: 100%;
             z-index: -1;
-            transition: .5s ease;
+            transition: 0.5s ease;
             background: #5ecbdf;
             border-radius: 8px;
-            
           }
         }
       }
