--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Cairo&family=Noto+Serif+Devanagari&family=Pacifico&display=swap&family=Gabriela&display=swap');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css');
+@import './assets/css/variables.scss';
 *{
     margin: 0;
     padding: 0;
@@ -9,7 +10,7 @@
     text-decoration: none;
     list-style: none;
     font-family: 'Cairo', sans-serif;
-    color: #fff;
+    color: $text;
 }
 body{
     overflow-x: hidden;
