--- a/src/App.scss
+++ b/src/App.scss
@@ -42,12 +42,16 @@
   color: $text;
   text-align: center;
   padding: 5px 0;
+  text-transform: capitalize;
 }
 
 
 .subtitle {
-  font-family: "Open Sans", Verdana, Helvetica, sans-serif;
   font-size: 18px;
+  strong{
+    font-size: 30px;
+    color: $link;
+  }
 }
 img {
   width: 100%;
@@ -91,11 +95,14 @@ img {
     display: flex;
     flex-wrap: wrap;
     gap: 15px;
+    justify-content: center;
     .image {
-      max-width: 250px;
-      height: 100px;
-      border: 3px #f2f2f2 solid;
+      max-width: 303px;
+      height: 207px;
+      border: 2px rgba($link,1) solid;
+      border-radius: 10px;
       box-shadow: 0 5px 15px -4px $boxShadow;
+      overflow: hidden;
     }
   }
 }
@@ -104,6 +111,9 @@ img {
     display: flex;
     flex-direction: column;
     gap: 45px;
+}
+.btn{
+  cursor: pointer;
 }
 
 @media screen and (max-width:350px) {
@@ -121,5 +131,11 @@ img {
   }
   100%{
     left: 0;
+  }
+}
+
+@media screen and (max-width:768px) {
+  .subtitle{
+      font-size: 17px;
   }
 }
