--- a/src/assets/css/gallery.scss
+++ b/src/assets/css/gallery.scss
@@ -3,30 +3,45 @@
 .gallery-page {
   .gallery {
     gap: 20px;
-    .title {
+    align-items: center;
+    width: 100%;
+    .slider{
+      display: flex;
       justify-content: center;
-      border-bottom: 1px solid rgba($text,0.5);
-      padding-bottom: 15px;
+      width: 80%;
       align-items: center;
-      gap: 10px;
-      &::after {
-        content: "";
-        width: 40px;
-        height: .5px;
-        background: $text;
+      gap: 2rem;
+      .img-container{
         display: flex;
         justify-content: center;
         align-items: center;
-      }
-      &::before {
-        content: "";
-        width: 40px;
-        height: .5px;
-        background: $text;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        position: relative;
+        width: 100%;
+        height: 250px;
+        .img{
+          height: 250px;
+          top: 0;
+          position: absolute;
+          opacity: 0;
+          transition: 1s ease;
+          width: 100%;
+          height: 100%;
+          border: 2px solid $secondary;
+          border-radius: 10px;
+          overflow: hidden;
+          &.active{
+            opacity: 1;
+            transition: 1s ease;
+          }
+        }
       }
     }
+  }
+}
+
+@media screen and (max-width:768px) {
+  .slider{
+    width: 100% !important;
+    gap: 0.5rem !important;
   }
 }
