--- a/src/App.scss
+++ b/src/App.scss
@@ -16,6 +16,7 @@
   flex-direction: column;
   gap: 10px;
   max-width: fit-content;
+  border-bottom: none !important;
   span{
     $height: 5px;
     position: relative;
@@ -41,8 +42,10 @@
   font: 22px "Gabriela", Verdana, Helvetica, sans-serif;
   color: $text;
   text-align: center;
-  padding: 5px 0;
   text-transform: capitalize;
+  border-bottom: 1px solid $text;
+  border-radius: 0 0 10px 10px;
+  padding: 5px 10px;
 }
 
 
@@ -74,22 +77,6 @@ img {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    span {
-      font-size: 15px;
-      color: $link;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      cursor: pointer;
-      &::after {
-        content: "»";
-        padding-left: 5px;
-        font-size: 20px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-    }
   }
   .images {
     display: flex;
